--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,41 +970,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## train-test split with no dimensionality reduction\n",
-    "base_xtrain,base_xtest,base_ytrain,base_ytest = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.2)"
+    "base_scaled_train_test = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.2)\n",
+    "xtrain_scaled,xtrain_scaler = apply_standard_scaler(base_scaled_train_test[0])\n",
+    "xtest_scaled,xtest_scaler = apply_standard_scaler(base_scaled_train_test[1])\n",
+    "ytrain_scaled,ytest_scaler = apply_standard_scaler(np.array(base_scaled_train_test[2]).reshape(-1,1))\n",
+    "ytest_scaled,ytest_scaler = apply_standard_scaler(np.array(base_scaled_train_test[3]).reshape(-1,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 923.36597,\n",
-       " 'train_RMSE_to_mean_ratio': 0.32371765600468566,\n",
-       " 'train_MAE:': 620.25684,\n",
-       " 'test_RMSE:': 988.6792,\n",
-       " 'test_RMSE_to_mean_ratio': 0.34677552359753305,\n",
-       " 'test_MAE:': 624.8265}"
+       "{'train_RMSE:': 0.8067869,\n",
+       " 'train_RMSE_to_mean_ratio': 54121016.0,\n",
+       " 'train_MAE:': 0.5419654,\n",
+       " 'test_RMSE:': 0.84422386,\n",
+       " 'test_RMSE_to_mean_ratio': -194679300.0,\n",
+       " 'test_MAE:': 0.5330999}"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_base_model = ApplyMethod_autoML(\n",
+    "    x_train=xtrain_scaled,\n",
+    "    x_test=xtest_scaled,\n",
+    "    y_train=ytrain_scaled,\n",
+    "    y_test=ytest_scaled,\n",
+    "    time_budget=60,\n",
+    "    metric='mse',\n",
+    "    estimator_list=['xgboost'],\n",
+    "    task='regression'\n",
+    ")\n",
+    "scaled_base_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1003.00214"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yhat = scaled_base_model[0].predict(xtest_scaled)\n",
+    "transform_rmse_to_seconds(scaler=ytest_scaler,y_test=base_scaled_train_test[3],y_hat_scaled=yhat)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 926.54297,\n",
+       " 'train_RMSE_to_mean_ratio': 0.32483146316497724,\n",
+       " 'train_MAE:': 623.2688,\n",
+       " 'test_RMSE:': 991.1644,\n",
+       " 'test_RMSE_to_mean_ratio': 0.34764720852738124,\n",
+       " 'test_MAE:': 627.4639}"
+      ]
+     },
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "auto_xgb_no_reduction = ApplyMethod_autoML(\n",
-    "    x_train=base_xtrain,\n",
-    "    x_test=base_xtest,\n",
-    "    y_train=base_ytrain,\n",
-    "    y_test=base_ytest,\n",
+    "    x_train=base_scaled_train_test[0],\n",
+    "    x_test=base_scaled_train_test[1],\n",
+    "    y_train=base_scaled_train_test[2],\n",
+    "    y_test=base_scaled_train_test[3],\n",
     "    time_budget=60,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost'],\n",
@@ -1495,41 +1554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "check Spark installation...This line should appear only once.\n",
-      "\n",
-      "use_spark=True requires installation of PySpark. Please run pip install flaml[spark]\n",
-      "        and check [here](https://spark.apache.org/docs/latest/api/python/getting_started/install.html)\n",
-      "        for more details about installing Spark.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'train_RMSE:': 280.12103,\n",
-       " 'train_RMSE_to_mean_ratio': 0.0982060497882842,\n",
-       " 'train_MAE:': 27.65247,\n",
-       " 'test_RMSE:': 383.4777,\n",
-       " 'test_RMSE_to_mean_ratio': 0.1345033630879645,\n",
-       " 'test_MAE:': 31.092775}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## first and foremost, is this model worth building? Is in-store time an important feature?\n",
     "hypoth_df = train_df.copy()\n",
     "hypoth_df['est_order_total_prep_time'] = hypoth_df['actual_total_delivery_duration'] - hypoth_df['est_time_non-prep']\n",
+    "\n",
     "# hypoth_feature_df = VIF_dim_reduction(feature_frame=hypoth_df,target_feature='actual_total_delivery_duration',vif_limit=20)[0]\n",
     "hypoth_xtrain,hypoth_xtest,hypoth_ytrain,hypoth_ytest = build_train_test(dataset=hypoth_df,target_feature='actual_total_delivery_duration',test_size=0.2)\n",
     "hypoth_feature_importances = ApplyMethod_autoML(\n",
@@ -1693,27 +1725,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 696.7563,\n",
-       " 'train_RMSE_to_mean_ratio': 0.36750396102434457,\n",
-       " 'train_MAE:': 545.2928,\n",
-       " 'test_RMSE:': 696.2218,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3690896034097234,\n",
-       " 'test_MAE:': 545.3483}"
+       "{'train_RMSE:': 916.5644,\n",
+       " 'train_RMSE_to_mean_ratio': 0.4587529049734808,\n",
+       " 'train_MAE:': 615.08075,\n",
+       " 'test_RMSE:': 985.7871,\n",
+       " 'test_RMSE_to_mean_ratio': 0.4934429255618392,\n",
+       " 'test_MAE:': 621.4875}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prep_est_train_test = build_train_test(dataset=hypoth_df[hypoth_df['actual_total_delivery_duration'] <= 5400].drop(columns='actual_total_delivery_duration'),target_feature='est_order_total_prep_time',test_size=0.2)\n",
+    "prep_est_train_test = build_train_test(dataset=hypoth_df.drop(columns='actual_total_delivery_duration'),target_feature='est_order_total_prep_time',test_size=0.2)\n",
     "prep_est_model = ApplyMethod_autoML(\n",
     "    x_train=prep_est_train_test[0],\n",
     "    x_test=prep_est_train_test[1],\n",
@@ -1729,44 +1761,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_prep_test = base_xtest.join(base_ytest)\n",
-    "base_prep_test['est_order_total_prep_time'] = base_prep_test['actual_total_delivery_duration'] - base_prep_test['est_time_non-prep']\n",
-    "base_prep_xtest,base_prep_ytest = base_prep_test.drop(columns=['est_order_total_prep_time','actual_total_delivery_duration']),base_prep_test[['est_order_total_prep_time']]"
+    "yhat_train,yhat_test = prep_est_model[0].predict(prep_est_train_test[0]),prep_est_model[0].predict(prep_est_train_test[1])\n",
+    "composite_train,composite_test = prep_est_train_test[0],prep_est_train_test[1]\n",
+    "composite_train['pred_order_prep_time'],composite_test['pred_order_prep_time'] = yhat_train.reshape(-1,1),yhat_test.reshape(-1,1)\n",
+    "composite_train['composite_deliv_time'],composite_test['composite_deliv_time'] = composite_train['pred_order_prep_time'] + composite_train['est_time_non-prep'],composite_test['pred_order_prep_time'] + composite_test['est_time_non-prep']\n",
+    "composite_train,composite_test = composite_train.join(hypoth_df[['actual_total_delivery_duration']]),composite_test.join(hypoth_df[['actual_total_delivery_duration']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prep_est_model[1].sort_values(by='importance',ascending=False).head(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "est_order_total_prep_time    0.500483\n",
-       "dtype: float32"
+       "{'train_RMSE:': 914.03235,\n",
+       " 'train_RMSE_to_mean_ratio': 0.320445435560397,\n",
+       " 'train_MAE:': 612.90985,\n",
+       " 'test_RMSE:': 984.5902,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3453413259407167,\n",
+       " 'test_MAE:': 619.67615}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yhat = prep_est_model[0].predict(base_prep_xtest)\n",
-    "mean_squared_error(y_true=base_prep_ytest,y_pred=yhat,squared=False)/np.mean(base_prep_ytest)"
+    "composite_deliv_model = ApplyMethod_autoML(\n",
+    "    x_train=composite_train.drop(columns='actual_total_delivery_duration'),\n",
+    "    x_test=composite_test.drop(columns='actual_total_delivery_duration'),\n",
+    "    y_train=composite_train['actual_total_delivery_duration'],\n",
+    "    y_test=composite_test['actual_total_delivery_duration'],\n",
+    "    time_budget=60,\n",
+    "    metric='mse',\n",
+    "    estimator_list=['xgb_gamma','xgboost'],\n",
+    "    task='regression'\n",
+    ")\n",
+    "composite_deliv_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>composite_deliv_time</td>\n",
+       "      <td>0.818599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>pred_order_prep_time</td>\n",
+       "      <td>0.107391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>0.015535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
+       "      <td>0.008977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>store_est_time_prep_per_item_max</td>\n",
+       "      <td>0.005389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.003911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>0.002022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>store_est_mean_total_prep_time</td>\n",
+       "      <td>0.001863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>store_est_time_prep_per_item_mean</td>\n",
+       "      <td>0.001639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>0.001491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>store_est_time_prep_per_item_std</td>\n",
+       "      <td>0.001474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>order_protocol__6.0</td>\n",
+       "      <td>0.001451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>market_id__3.0</td>\n",
+       "      <td>0.001367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>store_est_time_prep_per_item_median</td>\n",
+       "      <td>0.001354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>store_est_time_prep_per_item_min</td>\n",
+       "      <td>0.001323</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         features  importance\n",
+       "137                          composite_deliv_time    0.818599\n",
+       "136                          pred_order_prep_time    0.107391\n",
+       "10                              est_time_non-prep    0.015535\n",
+       "9    estimated_store_to_consumer_driving_duration    0.008977\n",
+       "16               store_est_time_prep_per_item_max    0.005389\n",
+       "13                            busy_to_outstanding    0.003911\n",
+       "14                         onshift_to_outstanding    0.002022\n",
+       "26                 store_est_mean_total_prep_time    0.001863\n",
+       "18              store_est_time_prep_per_item_mean    0.001639\n",
+       "25               store_est_median_total_prep_time    0.001491\n",
+       "19               store_est_time_prep_per_item_std    0.001474\n",
+       "109                           order_protocol__6.0    0.001451\n",
+       "100                                market_id__3.0    0.001367\n",
+       "17            store_est_time_prep_per_item_median    0.001354\n",
+       "15               store_est_time_prep_per_item_min    0.001323"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "composite_deliv_model[1].sort_values(by='importance',ascending=False).head(15)"
    ]
   }
  ],
