two step updates

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,21 +1960,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 942.2754,\n",
-       " 'train_RMSE_to_mean_ratio': 0.4714474567793109,\n",
-       " 'train_MAE:': 620.5666,\n",
-       " 'test_RMSE:': 905.7798,\n",
-       " 'test_RMSE_to_mean_ratio': 0.4544083497767289,\n",
-       " 'test_MAE:': 619.3075}"
+       "{'train_RMSE:': 909.8273,\n",
+       " 'train_RMSE_to_mean_ratio': 0.4552127297995784,\n",
+       " 'train_MAE:': 595.2015,\n",
+       " 'test_RMSE:': 883.75696,\n",
+       " 'test_RMSE_to_mean_ratio': 0.44336001694137717,\n",
+       " 'test_MAE:': 599.7777}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -2026,79 +2026,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>created_hour_of_day__2</td>\n",
-       "      <td>0.131980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>16</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.122762</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>store_est_median_total_prep_time</td>\n",
-       "      <td>0.054624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>subtotal</td>\n",
-       "      <td>0.051213</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>market_id__1.0</td>\n",
-       "      <td>0.040975</td>\n",
+       "      <td>0.089038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td>created_hour_of_day__3</td>\n",
-       "      <td>0.036818</td>\n",
+       "      <td>created_hour_of_day__2</td>\n",
+       "      <td>0.087517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>store_est_time_prep_per_item_mean</td>\n",
-       "      <td>0.032253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>15</th>\n",
        "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.032147</td>\n",
+       "      <td>0.042270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
+       "      <th>27</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>0.034555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>store_est_time_prep_per_item_mean</td>\n",
+       "      <td>0.031675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
        "      <td>created_hour_of_day__1</td>\n",
-       "      <td>0.027055</td>\n",
+       "      <td>0.030339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
+       "      <th>115</th>\n",
+       "      <td>created_hour_of_day__3</td>\n",
+       "      <td>0.027341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
        "      <td>created_day_of_week__0</td>\n",
-       "      <td>0.026648</td>\n",
+       "      <td>0.023265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>created_hour_of_day__5</td>\n",
-       "      <td>0.024702</td>\n",
+       "      <th>12</th>\n",
+       "      <td>orders_without_dashers</td>\n",
+       "      <td>0.021833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>store_est_time_prep_per_item_min</td>\n",
-       "      <td>0.021219</td>\n",
+       "      <th>108</th>\n",
+       "      <td>order_protocol__4.0</td>\n",
+       "      <td>0.021547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>market_id__2.0</td>\n",
-       "      <td>0.020350</td>\n",
+       "      <td>market_id__1.0</td>\n",
+       "      <td>0.020298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>order_protocol__4.0</td>\n",
-       "      <td>0.018668</td>\n",
+       "      <th>117</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.018014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
+       "      <th>132</th>\n",
        "      <td>created_day_of_week__2</td>\n",
-       "      <td>0.018098</td>\n",
+       "      <td>0.017527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>created_day_of_week__5</td>\n",
+       "      <td>0.014190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>created_day_of_week__4</td>\n",
+       "      <td>0.014078</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2106,24 +2106,24 @@
       ],
       "text/plain": [
        "                              features  importance\n",
-       "113             created_hour_of_day__2    0.131980\n",
-       "15              onshift_to_outstanding    0.122762\n",
-       "26    store_est_median_total_prep_time    0.054624\n",
-       "1                             subtotal    0.051213\n",
-       "98                      market_id__1.0    0.040975\n",
-       "114             created_hour_of_day__3    0.036818\n",
-       "19   store_est_time_prep_per_item_mean    0.032253\n",
-       "14                 busy_to_outstanding    0.032147\n",
-       "112             created_hour_of_day__1    0.027055\n",
-       "129             created_day_of_week__0    0.026648\n",
-       "116             created_hour_of_day__5    0.024702\n",
-       "16    store_est_time_prep_per_item_min    0.021219\n",
-       "99                      market_id__2.0    0.020350\n",
-       "107                order_protocol__4.0    0.018668\n",
-       "131             created_day_of_week__2    0.018098"
+       "16              onshift_to_outstanding    0.089038\n",
+       "114             created_hour_of_day__2    0.087517\n",
+       "15                 busy_to_outstanding    0.042270\n",
+       "27    store_est_median_total_prep_time    0.034555\n",
+       "20   store_est_time_prep_per_item_mean    0.031675\n",
+       "113             created_hour_of_day__1    0.030339\n",
+       "115             created_hour_of_day__3    0.027341\n",
+       "130             created_day_of_week__0    0.023265\n",
+       "12              orders_without_dashers    0.021833\n",
+       "108                order_protocol__4.0    0.021547\n",
+       "99                      market_id__1.0    0.020298\n",
+       "117             created_hour_of_day__5    0.018014\n",
+       "132             created_day_of_week__2    0.017527\n",
+       "135             created_day_of_week__5    0.014190\n",
+       "134             created_day_of_week__4    0.014078"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2134,14 +2134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
     "yhat_train,yhat_test = prep_est_model[0].predict(prep_est_train_test[0]),prep_est_model[0].predict(prep_est_train_test[1])\n",
     "composite_train,composite_test = prep_est_train_test[0],prep_est_train_test[1]\n",
     "composite_train['pred_order_prep_time'],composite_test['pred_order_prep_time'] = yhat_train.reshape(-1,1),yhat_test.reshape(-1,1)\n",
-    "# composite_train['composite_deliv_time'],composite_test['composite_deliv_time'] = composite_train['pred_order_prep_time'] + composite_train['est_time_non-prep'],composite_test['pred_order_prep_time'] + composite_test['est_time_non-prep']\n",
+    "composite_train['composite_deliv_time'],composite_test['composite_deliv_time'] = composite_train['pred_order_prep_time'] + composite_train['est_time_non-prep'],composite_test['pred_order_prep_time'] + composite_test['est_time_non-prep']\n",
     "composite_train,composite_test = composite_train.join(hypoth_df[['actual_total_delivery_duration']]),composite_test.join(hypoth_df[['actual_total_delivery_duration']])"
    ]
   },
@@ -2180,21 +2180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 940.9055,\n",
-       " 'train_RMSE_to_mean_ratio': 0.32980834236167805,\n",
-       " 'train_MAE:': 619.29095,\n",
-       " 'test_RMSE:': 904.88727,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3177702564252051,\n",
-       " 'test_MAE:': 618.283}"
+       "{'train_RMSE:': 898.2664,\n",
+       " 'train_RMSE_to_mean_ratio': 0.3148623883437651,\n",
+       " 'train_MAE:': 591.5428,\n",
+       " 'test_RMSE:': 884.6164,\n",
+       " 'test_RMSE_to_mean_ratio': 0.31065171131609426,\n",
+       " 'test_MAE:': 599.44385}"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2205,9 +2205,9 @@
     "    x_test=composite_test.drop(columns=['actual_total_delivery_duration']),\n",
     "    y_train=composite_train['actual_total_delivery_duration'],\n",
     "    y_test=composite_test['actual_total_delivery_duration'],\n",
-    "    time_budget=60,\n",
+    "    time_budget=180,\n",
     "    metric='mse',\n",
-    "    estimator_list=['xgb_gamma','xgboost'],\n",
+    "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression'\n",
     ")\n",
     "composite_deliv_model[2]"
@@ -2215,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -2245,110 +2245,138 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>pred_order_prep_time</td>\n",
-       "      <td>0.540688</td>\n",
+       "      <th>137</th>\n",
+       "      <td>composite_deliv_time</td>\n",
+       "      <td>0.549367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>est_time_non-prep</td>\n",
-       "      <td>0.147681</td>\n",
+       "      <th>41</th>\n",
+       "      <td>clean_store_primary_category__cafe</td>\n",
+       "      <td>0.150009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
-       "      <td>0.132658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.078381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.054670</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>estimated_order_place_duration</td>\n",
-       "      <td>0.006343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>store_est_time_prep_per_item_min</td>\n",
-       "      <td>0.005575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>store_est_mean_total_prep_time</td>\n",
-       "      <td>0.004691</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>store_est_time_prep_per_item_std</td>\n",
-       "      <td>0.004021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>store_est_time_prep_per_item_median</td>\n",
-       "      <td>0.003326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>created_hour_of_day__1</td>\n",
-       "      <td>0.003188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>created_hour_of_day__5</td>\n",
-       "      <td>0.002911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>store_est_time_prep_per_item_mean</td>\n",
-       "      <td>0.002907</td>\n",
+       "      <th>107</th>\n",
+       "      <td>order_protocol__4.0</td>\n",
+       "      <td>0.044358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>available_to_outstanding</td>\n",
-       "      <td>0.002842</td>\n",
+       "      <td>0.027346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>market_id__3.0</td>\n",
-       "      <td>0.002732</td>\n",
+       "      <th>129</th>\n",
+       "      <td>created_day_of_week__0</td>\n",
+       "      <td>0.023894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>pred_order_prep_time</td>\n",
+       "      <td>0.023239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>0.020860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>estimated_order_place_duration</td>\n",
+       "      <td>0.018188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>created_day_of_week__3</td>\n",
+       "      <td>0.015659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>store_est_time_prep_per_item_max</td>\n",
+       "      <td>0.015501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>store_est_time_prep_per_item_min</td>\n",
+       "      <td>0.015494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.013421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>available_dashers</td>\n",
+       "      <td>0.010924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>store_est_mean_total_prep_time</td>\n",
+       "      <td>0.010860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>created_hour_of_day__4</td>\n",
+       "      <td>0.010793</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         features  importance\n",
-       "136                          pred_order_prep_time    0.540688\n",
-       "10                              est_time_non-prep    0.147681\n",
-       "9    estimated_store_to_consumer_driving_duration    0.132658\n",
-       "15                         onshift_to_outstanding    0.078381\n",
-       "14                            busy_to_outstanding    0.054670\n",
-       "8                  estimated_order_place_duration    0.006343\n",
-       "16               store_est_time_prep_per_item_min    0.005575\n",
-       "27                 store_est_mean_total_prep_time    0.004691\n",
-       "20               store_est_time_prep_per_item_std    0.004021\n",
-       "18            store_est_time_prep_per_item_median    0.003326\n",
-       "112                        created_hour_of_day__1    0.003188\n",
-       "116                        created_hour_of_day__5    0.002911\n",
-       "19              store_est_time_prep_per_item_mean    0.002907\n",
-       "12                       available_to_outstanding    0.002842\n",
-       "100                                market_id__3.0    0.002732"
+       "                               features  importance\n",
+       "137                composite_deliv_time    0.549367\n",
+       "41   clean_store_primary_category__cafe    0.150009\n",
+       "107                 order_protocol__4.0    0.044358\n",
+       "12             available_to_outstanding    0.027346\n",
+       "129              created_day_of_week__0    0.023894\n",
+       "136                pred_order_prep_time    0.023239\n",
+       "15               onshift_to_outstanding    0.020860\n",
+       "8        estimated_order_place_duration    0.018188\n",
+       "132              created_day_of_week__3    0.015659\n",
+       "17     store_est_time_prep_per_item_max    0.015501\n",
+       "16     store_est_time_prep_per_item_min    0.015494\n",
+       "14                  busy_to_outstanding    0.013421\n",
+       "11                    available_dashers    0.010924\n",
+       "27       store_est_mean_total_prep_time    0.010860\n",
+       "115              created_hour_of_day__4    0.010793"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "composite_deliv_model[1].sort_values(by='importance',ascending=False).head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "886.24536"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(mean_squared_error(y_true=composite_test['actual_total_delivery_duration'],y_pred=auto_xgb_no_reduction[0].predict(composite_test.drop(columns=['actual_total_delivery_duration'])).reshape(-1,1),squared=False))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Despite adding two new features, the inability of the first model to accurately estimate the amount of time an order spends in the store produces a final outcome. Test RMSE comes to 884.6164, which is nominally the same performance as the single model approach."
    ]
   }
  ],
