updated classification score outputs

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,14 +1092,14 @@
     "            }\n",
     "        if task == 'classification':\n",
     "            y_hat_test = auto_ml.predict(x_test)\n",
-    "            y_hat_test_proba = auto_ml.predict_proba(x_test)[:,1]\n",
+    "            y_hat_test_proba = auto_ml.predict_proba(x_test)\n",
     "            y_hat_train = auto_ml.predict(x_train)\n",
     "            y_hat_train_proba = auto_ml.predict_proba(x_train)[:,1]\n",
     "            eval_stats = {\n",
     "                'train_accuracy': accuracy_score(y_true=y_train,y_pred=y_hat_train),\n",
-    "                'train_roc_auc': roc_auc_score(y_true=y_train,y_score=y_hat_train_proba),\n",
+    "                'train_roc_auc': roc_auc_score(y_true=y_train,y_score=y_hat_train_proba[:,1]),\n",
     "                'test_accuracy': accuracy_score(y_true=y_test,y_pred=y_hat_test),\n",
-    "                'test_roc_auc': accuracy_score(y_true=y_test,y_pred=y_hat_test_proba)\n",
+    "                'test_roc_auc': roc_auc_score(y_true=y_test,y_score=y_hat_test_proba[:,1])\n",
     "            }\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
@@ -1336,7 +1336,8 @@
     "    time_budget=180,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
-    "    task='regression'\n",
+    "    task='regression',\n",
+    "    cv_folds=5\n",
     ")\n",
     "auto_xgb_no_reduction[2]"
    ]
@@ -1857,21 +1858,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 894.4838,\n",
-       " 'train_RMSE_to_mean_ratio': 0.3144141965879445,\n",
-       " 'train_MAE:': 587.3923,\n",
-       " 'test_RMSE:': 845.75916,\n",
-       " 'test_RMSE_to_mean_ratio': 0.29843398869023896,\n",
-       " 'test_MAE:': 595.4443}"
+       "{'train_RMSE:': 815.273,\n",
+       " 'train_RMSE_to_mean_ratio': 0.2865713176232322,\n",
+       " 'train_MAE:': 533.9441,\n",
+       " 'test_RMSE:': 843.038,\n",
+       " 'test_RMSE_to_mean_ratio': 0.2974738125155819,\n",
+       " 'test_MAE:': 590.3954}"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,14 +1886,34 @@
     "    time_budget=180,\n",
     "    task='regression',\n",
     "    metric='mse',\n",
-    "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth']\n",
+    "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
+    "    cv_folds=5\n",
     ")\n",
     "trimmed_deliv_pred_model[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[952.1398, 985.4278, 910.0741, 863.52386, 961.5246]\n",
+      "934.53796\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(trimmed_deliv_pred_model[3])\n",
+    "print(np.mean(trimmed_deliv_pred_model[3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +2010,7 @@
        "100                     market_id__1.0    0.019343"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
